<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/global_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/detail_title_text"
        android:textAppearance="@style/TextAppearance.Detail.Title"
        android:paddingTop="@dimen/detail_padding_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvName"
        tools:text="@tools:sample/full_names"
        android:textAppearance="@style/TextAppearance.Detail.Text"
        android:paddingTop="@dimen/global_padding"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvBirthdayLabel"
        android:text="@string/et_birthday_label"
        android:textAppearance="@style/TextAppearance.Detail.Text"
        android:paddingTop="@dimen/global_padding"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvBirthday"
        tools:text="@tools:sample/date/mmddyy"
        android:textAppearance="@style/TextAppearance.Detail.Text"
        android:paddingTop="@dimen/global_padding"
        android:paddingLeft="@dimen/global_padding"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toEndOf="@id/tvBirthdayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvPhoneLabel"
        android:text="@string/et_phone_label"
        android:textAppearance="@style/TextAppearance.Detail.Text"
        android:paddingTop="@dimen/global_padding"
        app:layout_constraintTop_toBottomOf="@id/tvBirthday"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvPhone"
        tools:text="@tools:sample/us_phones"
        android:textAppearance="@style/TextAppearance.Detail.Text"
        android:paddingTop="@dimen/global_padding"
        android:paddingLeft="@dimen/global_padding"
        app:layout_constraintTop_toBottomOf="@id/tvBirthday"
        app:layout_constraintStart_toEndOf="@id/tvPhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvEmailLabel"
        android:text="@string/et_email_label"
        android:textAppearance="@style/TextAppearance.Detail.Text"
        android:paddingTop="@dimen/global_padding"
        app:layout_constraintTop_toBottomOf="@id/tvPhone"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvEmail"
        tools:text="@tools:sample/us_zipcodes"
        android:textAppearance="@style/TextAppearance.Detail.Text"
        android:paddingTop="@dimen/global_padding"
        android:paddingLeft="@dimen/global_padding"
        app:layout_constraintTop_toBottomOf="@id/tvPhone"
        app:layout_constraintStart_toEndOf="@id/tvEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvDescriptionLabel"
        android:text="@string/et_desc_label"
        android:textAppearance="@style/TextAppearance.Detail.Text"
        android:paddingTop="@dimen/global_padding"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvDescription"
        tools:text="@tools:sample/lorem/random"
        android:textAppearance="@style/TextAppearance.Detail.Text"
        android:paddingTop="@dimen/global_padding"
        android:paddingLeft="@dimen/global_padding"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintStart_toEndOf="@id/tvDescriptionLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btEdit"
        android:text="@string/bt_edit_text"
        android:paddingTop="@dimen/global_padding"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>